--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
     <section class="section alt-section" id="info">
       <h2>Plugin Info</h2>
-      <p>Syrup Studios creates custom Minecraft plugins to elevate your gameplay experience. We aim for simplicity, innovation, and fun!</p>
+      <p>Syrup studios</p>
     </section>
 
     <section class="section" id="contributors">
